# Egoheim

./: .gitignore  Egoheim.sln  Egoheim.vcxproj  Egoheim.vcxproj.filters  README.md  main.cpp  meson.build
Assets/StartScene/Bilskin/: BackGroundBilskin.aseprite  ButtonBackgroundBilskin.aseprite
Egoheim/: Egoheim.vcxproj  Egoheim.vcxproj.filters
Egoheim/Assets/StartScene/Bilskin/: ButtonBackgroundBilskin.aseprite
Egoheim/Scripts/includes/: AnimatedTexture.h  Constants.h  Font.h  Game.h  ResourceManager.h  SceneManager.h
Egoheim/Scripts/includes/EventHandling/: Input.h  InputAction.h  InputConfiguration.h
Egoheim/Scripts/includes/GameManagers/: InputManager.h  ResourceManager.h  SceneManager.h
Egoheim/Scripts/includes/MenuElements/: Button.h  TextButton.h
Egoheim/Scripts/includes/Scenes/: CombatScene.h  Scene.h  SceneManager.h  StartScene.h
Egoheim/Scripts/includes/Utils/: AnimatedTexture.h  AnimatedTextureInfo.h  Button.h  Font.h  ImageButton.h  Structs.h  TextButton.h  WindowCoeffs.h
Egoheim/Scripts/src/: AnimatedTexture.cpp  Font.cpp  Game.cpp  Main.cpp  ResourceManager.cpp  SceneManager.cpp
Egoheim/Scripts/src/EventHandling/: Input.cpp  InputConfiguration.cpp  InputManager.cpp
Egoheim/Scripts/src/GameManagers/: InputManager.cpp  ResourceManager.cpp  SceneManager.cpp
Egoheim/Scripts/src/MenuElements/: Button.cpp  TextButton.cpp
Scripts/includes/: Constants.h  Font.h
Scripts/includes/MenuElements/: Button.h  ImageButton.h  TextButton.h
Scripts/includes/Scenes/: CombatScene.h  Scene.h  SceneManager.h  StartScene.h
Scripts/src/: Font.cpp  Main.cpp
Scripts/src/MenuElements/: ImageButton.cpp  TextButton.cpp
Scripts/src/Scenes/: StartScene.cpp
config/input/: controller-input-config.json  desktop-input-config.json
config/resource/: scenes-config.json
include/: Game.hpp  SDLContext.hpp
include/game_systems/: GameContext.hpp
include/game_systems/event/: Event.hpp  EventDispatcher.hpp
include/game_systems/input/: ControllerInput.hpp  ControllerInputConfig.hpp  ControllerState.hpp  DesktopInput.hpp  DesktopInputConfig.hpp  DesktopState.hpp  Input.hpp  InputAction.hpp  InputConfig.hpp  InputContext.hpp  InputManager.hpp
include/game_systems/render/: RenderingManager.hpp
include/game_systems/resource/: ResourceManager.hpp
include/game_systems/scene/: Scene.hpp  SceneManager.hpp
src/: Game.cpp  SDLContext.cpp  meson.build
src/game_systems/: meson.build
src/game_systems/event/: EventDispatcher.cpp  meson.build
src/game_systems/input/: ControllerInput.cpp  ControllerInputConfig.cpp  DesktopInput.cpp  DesktopInputConfig.cpp  InputManager.cpp  meson.build
src/game_systems/render/: RenderingManager.cpp  meson.build
src/game_systems/resource/: ResourceManager.cpp  meson.build
src/game_systems/scene/: Scene.cpp  SceneManager.cpp  meson.build
x64/Debug/: Egoheim.exe.recipe  ImageButton.h.ifc  ImageButton.h.ifc.d.json  ImageButton.h_68FA60A19DA1CF2D.ifc.dt.module.json  ImageButton.h_68FA60A19DA1CF2D.ifc.dt.module.json.command  ImageButton.h_A687E997D3F47CFE.ifc.dt.d.json  ImageButton.h_A687E997D3F47CFE.ifc.dt.module.json  ImageButton.h_A687E997D3F47CFE.ifc.dt.module.json.command  imagebutton.h.module.json  vc143.idb
x64/Debug/Egoheim.tlog/: CL.12152.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Egoheim.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/Egoheim_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
(+17 files in other folders)
